<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_rounded_corners"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/send_option_1"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_marginTop="20dp"
        android:text="@string/send_option1"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/send_option_2"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_marginTop="80dp"
        android:text="@string/send_option2"

        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/send_option_3"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="16dp"
        android:text="@string/send_option3"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toBottomOf="@+id/button2" />
</LinearLayout>