<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".Setup.OTPActivity">

    <TextView
        android:id="@+id/lbl_otp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enter_otp_number"
        android:textAlignment="center"
        android:textColor="@color/gold"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_status" />

    <EditText
        android:id="@+id/txt_otp"
        android:layout_width="211dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_text_design"
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_otp"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/cmd_complete_setup"
        android:layout_width="233dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/rounded_button"
        android:text="@string/verify_otp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_otp" />

    <ImageView
        android:id="@+id/img_status"
        android:layout_width="184dp"
        android:layout_height="191dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/otp_wait"
        android:contentDescription="@string/otp_status" />
</androidx.constraintlayout.widget.ConstraintLayout>